--- a/projeto/index.html
+++ b/projeto/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,12 +22,12 @@
                     </ul>
                </div>
            </nav>
-           <div id="main-banne">
+           <div id="main-banner">
                <div id="search-form">
                   <h1>A maneira mais facil de encontrar um novo emprego</h1> 
                   <p>conecte-se de forma gratuita as melhores empresas e consiga o emeprego dos seus sonhos </p>
                   <form >
-                      <input type="text" name="job" placeholder="digie o cargo"id="">
+                      <input type="text" name="job" placeholder="Digite um cargo"id="">
                       <select name="Region" >
                           <option value="">
                               Todos os estados
@@ -42,5 +42,85 @@
            </div>
        </header>
    </div> 
+   <main id="lastjob-container" class="wrapper">
+       <h1> Ultimas vagas enviadas</h1>
+       <ul>
+           <li>
+                <a href="#" class="clickarea">
+                    <div class="company-box">
+                        <img src="img/googlelogo.png" >
+                        <div class="company-info">
+                            <h3>Developer</h3>
+                            <p>google</p>
+                        </div>
+                    </div>
+                    <div class="locality">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p>Montain view, California</p>
+                    </div>
+                    <div class="job-type">
+                        <span class="clt"> CLT</span>
+                    </div>
+                </a>     
+           </li>
+           <li>
+            <a href="#" class="clickarea">
+                <div class="company-box">
+                    <img src="img/facebooklogo.png" >
+                    <div class="company-info">
+                        <h3>Full Stack Developer</h3>
+                        <p>Facebook</p>
+                    </div>
+                </div>
+                <div class="locality">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p>Menlo Park, California</p>
+                </div>
+                <div class="job-type"> 
+                    <span class="PJ"> PJ</span>
+                </div>
+            </a>     
+       </li>
+       <li>
+        <a href="#" class="clickarea">
+            <div class="company-box">
+                <img src="img/ibmlogo.png" >
+                <div class="company-info">
+                    <h3>DBA</h3>
+                    <p>IBM</p>
+                </div>
+            </div>
+            <div class="locality">
+                <i class="fas fa-map-marker-alt"></i>
+                <p> Armonk, New York</p>
+            </div>
+            <div class="job-type">
+                <span class="PJ"> PJ</span>
+            </div>
+        </a>     
+       </li>
+       <li>
+        <a href="#" class="clickarea">
+            <div class="company-box">
+                <img src="img/linkedinlogo.png" >
+                <div class="company-info">
+                    <h3>Front-end Developer</h3>
+                    <p>LinkedIn</p>
+                </div>
+            </div>
+            <div class="locality">
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Sunnyvale, California</p>
+            </div>
+            <div class="job-type">
+                <span class="homeoffice"> Home Office</span>
+            </div>
+        </a>     
+        </li>
+     </ul>
+        <div class="btnjobs-container">
+           <a href="#" class="btn-jobs">Ver mais vagas </a>
+        </div>
+   </main>
 </body>
 </html>
