--- a/projeto/index.html
+++ b/projeto/index.html
@@ -122,5 +122,36 @@
            <a href="#" class="btn-jobs">Ver mais vagas </a>
         </div>
    </main>
+   <section id="sendjob-container">
+       <div id="sendjobs" class="wrapper">
+           <h2>Envie uma vaga que sera vista por milhares de candidato</h2>
+           <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae explicabo iste iusto rerum repellat quam! Soluta iure sit eligendi quibusdam veritatis aut excepturi, inventore, ex atque deserunt, velit temporibus doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste ducimus nemo veritatis deserunt atque sunt, itaque autem quidem maxime adipisci nihil temporibus voluptate. Accusantium magnam voluptates animi dicta, mollitia obcaecati!</p>
+           <a href="#" class="btn-light">enviar vaga </a>
+     
+       </div>  
+   </section>
+   <section id="status-container" class="wrapper">
+        <h2 class="title-center">Estatisticas do Jobfidders</h2>
+        <p class="p-center"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo quaerat nihil veniam minima eum voluptatum hic autem numquam quidem minus. Atque eaque perspiciatis sapiente animi odio, expedita consequuntur mollitia impedit?
+        </p>
+    <div>
+        <div class="status-box">
+            <span class="status-qtd"> 150</span>
+            <p class="status=text">Vagas abertas</p>
+        </div>
+        <div class="status-box">
+            <span class="status-qtd"> 250</span>
+            <p class="status=text">Candidatos contratados</p>
+        </div>
+        <div class="status-box">
+            <span class="status-qtd"> 50</span>
+            <p class="status=text">empresas participantes</p>
+        </div>
+        <div class="status-box">
+            <span class="status-qtd"> 550</span>
+            <p class="status=text">Candidatos</p>
+        </div>
+    </div>
+   </section>
 </body>
 </html>
