--- a/projeto/index.html
+++ b/projeto/index.html
@@ -179,5 +179,87 @@
          </div>
          </div>
    </section>
+   <section id="blog-container" class="wrapper">
+    <h2 class="title-center">Ultimos artigos do blog</h2>
+    <p class="p-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptate magni dolor, earum suscipit veniam quibusdam, reprehenderit atque nesciunt vel velit, illo adipisci voluptas molestias blanditiis tempora minus consequatur consectetur!</p>
+        <div class="article-box">
+            <img src="img/blog1.jpg" alt="">
+            <h4><a href="#">Article title</a></h4>
+            <p class="article-date">05 de fevereiro de 2020 | 10 comentarios</p>
+            <p class="article-resume">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita molestias deserunt beatae a nemo tempore, recusandae quo. Natus recusandae magnam asperiores in quod delectus, laboriosam quae, laborum mollitia, nostrum repellat.</p>
+            <a href="#" class="article-btn btn-light"> Ler post</a>
+        </div>
+        <div class="article-box">
+            <img src="img/blog2.jpg" alt="">
+            <h4><a href="#">Article title</a></h4>
+            <p class="article-date">29 de março de 2020 | 20 comentarios</p>
+            <p class="article-resume">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita molestias deserunt beatae a nemo tempore, recusandae quo. Natus recusandae magnam asperiores in quod delectus, laboriosam quae, laborum mollitia, nostrum repellat.</p>
+            <a href="#" class="article-btn btn-light"> Ler post</a>
+        </div>
+        <div class="article-box">
+            <img src="img/blog3.jpg" alt="">
+            <h4><a href="#">Article title</a></h4>
+            <p class="article-date">05 de agosto de 2020 | 10 comentarios</p>
+            <p class="article-resume">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita molestias deserunt beatae a nemo tempore, recusandae quo. Natus recusandae magnam asperiores in quod delectus, laboriosam quae, laborum mollitia, nostrum repellat.</p>
+            <a href="#" class="article-btn btn-light"> Ler post</a>
+        </div>
+
+   </section>
+  <footer>
+      <div class="wrapper">
+          <div class="footer-box">
+              <div class="company-footer">
+                  <img src="img/logo.png" >
+                  <h2>Jobfinder</h2>
+                  <p>A meneira mais facil de encontra seu emprego</p>
+              </div>
+          </div>
+          <div class="footer-box">
+            <div class="article-footer">
+                <ul class="footer-list footer-listArt">
+                    <li><a href="#">Como conseguir emprego em tempos de crise ?</a>
+                        <span class="article-date">05 de fevereiro de 2020</span>
+                    </li>
+                    <li><a href="#">Como conseguir emprego em tempos de crise?</a>
+                        <span class="article-date">25 de abril de 2020</span>
+                    </li>
+                    <li><a href="#">Como conseguir emprego em tempos de crise ?</a>
+                        <span class="article-date">30 de novembro de 2020</span>
+                    </li>
+                </ul>  
+            </div>
+        </div>
+        <div class="footer-box">
+            <h2>Nos encontre nas redes sociais</h2>
+            <ul class="footer-list">
+                <li>
+                     <a href="#" class="link">
+                        <i class="fab fa-facebook-square"></i>
+                        <span>Facebook</span>
+                     </a> 
+                </li>
+                <li>
+                    <a href="#" class="link">
+                        <i class="fab fa-instagram"></i>
+                        <span>Instragram</span>
+                     </a> 
+                </li>
+                <li>
+                    <a href="#" class="link">
+                        <i class="fab fa-linkedin"></i>
+                        <span>LinkedIn</span>
+                     </a> 
+                </li>
+
+            </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="wrapper">
+            <p> copyright &copy;  2021 - by Kimevery</p>
+        </div>
+    </div>
+  </footer>
+
 </body>
 </html>
